# tsme

./: .gitignore  .gitlab-ci.yml  pyproject.toml  requirements.txt
notebooks/: cahn_hilliard_equation.ipynb  fitzhugh_nagumo_equation.ipynb  lorenz_system.ipynb  molecular_dynamics.ipynb
tsme/: __init__.py
